<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/hint_name"
            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/hint_num"
            android:layout_below="@+id/editText"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/hint_date"
            android:layout_below="@+id/editText2"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/hint_time"
            android:layout_below="@+id/editText3"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText5"
            android:hint="@string/hint_phone"
            android:layout_below="@+id/editText4"
            android:layout_alignLeft="@+id/editText4"
            android:layout_alignStart="@+id/editText4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText6"
            android:hint="@string/hint_pw"
            android:layout_below="@+id/editText5"
            android:layout_alignLeft="@+id/editText5"
            android:layout_alignStart="@+id/editText5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/hint_web"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_below="@+id/editText6"
            android:layout_alignLeft="@+id/editText6"
            android:layout_alignStart="@+id/editText6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText8"
            android:hint="@string/hint_email"
            android:layout_below="@+id/editText7"
            android:layout_alignLeft="@+id/editText7"
            android:layout_alignStart="@+id/editText7" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>